infra/k8s/overlays/prod/patch-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pjb-api
spec:
  template:
    spec:
      containers:
        - name: backend
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "1"
              memory: 2Gi
            limits:
              cpu: "4"
              memory: 4Gi
